# adk-generator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RLM_todo_2  WORKFLOW_AGENT_UPDATE.md  __init__.py  adk-generator-flowchart.md  agent.py  app.py  cli.py  databricks.yml  etl_notebook.py  flow.csv  job.json  pyproject.toml  ralphPrompt.md  requirements.txt  run_output_785535593357729.json
.cursor/plans/: Issue0122226.md  bmad_loopagent_integration_24ba9cc7.plan.md  bmad_runner_integration_94058d90.plan.md  (+3 more)
.gemini/: settings.json
_bmad/: README.md
_bmad/bmb/: config.yaml
_bmad_auto/: .gitignore  spendmend-install.js
adk_generator/: __init__.py  agent.py  app.py
agents/: __init__.py  base_agent_gen.py  callbacks_gen.py  design_agent.py  memory_gen.py  review_agent.py  tools_gen.py
ai_docs/: AutoDataSciDev_synth.md  Databricks_RLM_Deployment.md  Gemin_Agent_skills.md  OpenAPI_adk_tool.md  RLM_overview.md  Typer_for_LLM.md  adk_REST_OPENapi_tool.md  adk_agentTool_with_its_own_tool.md  adk_custom_metadata.md  adk_custom_tools.md  adk_delta_session_service.md  adk_session.md  databricks_agents_file_reading.md  databricks_table_trigger.md  exiting_LoopAgent.md  github_REST_api_file_download.md  github_rawURL_download.md  google_search_AgentTool.md  sql_describe.md
databricks_rlm_agent/: CLAUDE.md  __init__.py  agent.py  artifact_registry.py  artifact_registry_local.py  cli.py  databricks_rlm_agent-0.1.1-py3-none-any.whl  databricks_rlm_agent-0.1.2-py3-none-any.whl  databricks_rlm_agent-0.1.6-py3-none-any.whl  execution_backend.py  executor.py  ingestor.py  jobs_api.py  prompts.py  pyproject.toml  run.py  secrets.py  sql_warehouse.py  sync_to_uc.py  telemetry.py  test_tasks.py
databricks_rlm_agent/agents/: __init__.py  job_builder.py
databricks_rlm_agent/docs/: E2E_TESTING.md  RLM_implementation_plan.md  RLM_implementation_summary.md  callback_context_mechanics.md  gpt5_code_review1.md  litellm_integration.md
databricks_rlm_agent/modeling/: __init__.py  fallback_router.py  model_factory.py
databricks_rlm_agent/plugins/: __init__.py  code_linting_plugin.py  formatting_check_plugin.py  llm_query_escalation_plugin.py  local_telemetry_plugin.py  rlm_context_injection_plugin.py  rlm_context_pruning_plugin.py  uc_delta_telemetry_plugin.py  uc_tool_execution_safety_plugin.py
databricks_rlm_agent/scripts/: clear_wheel_cache.sh
databricks_rlm_agent/sessions/: __init__.py  delta_session_service.py  local_session_service.py
databricks_rlm_agent/tools/: __init__.py  delegate_code_results.py  exit_loop.py  get_Jira_ticket_attachments.py  get_repo_file.py  llm_query.py  metadata_keyword_search.py  repo_filename_search.py  save_artifact_to_volumes.py  save_python_code.py
databricks_rlm_agent/utils/: __init__.py  docstring_parser.py  jira_attachments.py  state_helpers.py
docs/: RLM_implementation_plan.md  RLM_implementation_summary.md  code_execution_path.md  issue_004_implementation_summary.md  issuekey_repo_mapping.json  jira_issuekey_repo_mapping.md  litellm_integration.md  llm_context_telemetry_implementation.md  local_mode_implementation_be7e99f4.work_summary.md  test_download_methods_analysis.md
issues/: 002_artifact-registry-table-missing.md  005_github-token-missing-from-secrets.md  README.md  local_mode_gap_12.txt  local_mode_gap_14.txt
plans/: OptionC_orchestration_update.md  RLM_overview.md  Resetting_subLM_state.md  before_model_callback_for_context_telemetry.md  bmad_integration_prompt.md  callback_context_filtering.md  local_runtime_bash_startup_script.md  opt_in_runtime_per_call_context_state_snapshot.md
resources/: litellm_responses_proxy.yaml  rlm_executor_job.yml  rlm_ingestor_job.yml  rlm_orchestrator_job.yml
runtime_monitor/: flow_report.md  flow_timeline.jsonl  test_7_test_level_7_1769413120_643279002695377.md
scripts/: Real_Human_Completed_tasks.py  add_filepath_columns.py  add_jira_test_task.py  check_agentbricks_eligibility.py  databricks_populate_pr_urls.py  databricks_rlm_flow.py  deploy_populate_pr_urls.sh  deploy_rlm_two_job_bundle.sh  deploy_test_get_repo_file.sh  enable_cdf_jira_table.py  execute_sql.py  fetch_run_logs.py  get_bundle_job_id.sh  github_pr_results.json  inspect_events_context_flow.py  inspect_llm_context_telemetry_flow.py  jira_download_attachments.py  jira_pr_samples.json  litellm_responses_smoke_test.py  llm_context_telemetry_view.sql  populate_jira_pr_urls.py  populate_pr_results.json  populate_pr_urls_job.json  query_jira_pr_repos.py  run_and_wait.py  run_local_rlm.sh  sync_secrets_to_databricks.sh  test_download_methods.py  test_download_methods_job.json  test_get_repo_file_job.json  test_google_api.py  test_jira_api.py  test_pr_urls_results.json  test_tasks.py  wait_for_run.py
tests/: __init__.py  conftest.py  test_tools.py
tools/: template_tools.py
(+86 files in other folders)
